--- a/scripts_bridge/.conf
+++ b/scripts_bridge/.conf
@@ -1,6 +1,6 @@
 {
 	"src":{
-		"path":"../src/",
+		"path":"../src/bridge/",
 		"dependPath":"./",
 		"ignorepre":[".png.",".jpg.",".jpeg.",".webp."],
 		"ignoresuf":[".d.ts",".md"],
@@ -18,7 +18,7 @@
 	"dsts":
 	[
         {
-			"path":"../src/",
+			"path":"../src/bridge/",
 			"includesuf":[".rs",".xlsx"],
 			"pre":"test3",
 			"tasks":[
@@ -36,7 +36,7 @@
             ]
         },
 		{
-            "path":"../run",
+            "path":"../run/bridge/",
             "includesuf":[".ts",".js"],
 			"pre":"test1",
 			"tasks":[
