--- a/scripts_bridge/.conf
+++ b/scripts_bridge/.conf
@@ -19,20 +19,25 @@
 	[
         {
 			"path":"../src/bridge/",
-			"includesuf":[".rs",".xlsx"],
+			"includesuf":[".rs",".xlsx", ".ts"],
 			"pre":"test3",
 			"tasks":[
 				{
 					"suf":".rs",
 					"proc":"./plugin/rs2ts",
-					"args":[{"root": "pi","bin": "../src/pi/util/bon", "mgr": "../src/pi/struct/struct_mgr", "sinfo": "../src/pi/struct/sinfo"}],
+					"args":[{"root": "bridge","bin": "../src/pi/util/bon", "mgr": "../src/pi/struct/struct_mgr", "sinfo": "../src/pi/struct/sinfo"}],
 					"remote1":"192.168.31.108:6666/pi_test"
 				},{
 					"suf":".xlsx",
 					"proc":"./plugin/xls2rs",
 					"args":[{"cfgPath":"../src/pi/util/cfg"}],
 					"remote1":"192.168.31.108:6666/pi_test"
-				}
+				},{
+                    "suf":".ts",
+					"proc":"./plugin/tsrpc",
+					"args":[{"rpcStruct":"../src/bridge/net/rpc_meta.s", "cfgPath": "../src/pi/util/cfg", "asyncStruct":"../src/bridge/async/async_meta.s", "root":"bridge"}],
+					"remote1":"192.168.31.108:6666/pi_test"
+                }
             ]
         },
 		{
