--- a/scripts_pi/.conf
+++ b/scripts_pi/.conf
@@ -30,7 +30,7 @@
 				},{
 					"suf":".xlsx",
 					"proc":"./plugin/xls2rs",
-					"args":[{"cfgPath":"../src/pi/util/cfg"}],
+					"args":[{"cfgPath":"../src/pi/util/cfg", "root": "pi"}],
 					"remote1":"192.168.31.108:6666/pi_test"
 				}
             ]
